fix: title contrast

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -12,7 +12,7 @@ nav {
 h1 {
   margin: 0 1rem 0 0;
   font-size: 1.125rem;
-  color: rgb(96, 165, 250);
+  color: rgb(29, 78, 216);
 }
 
 form {
